all changes done

--- a/frontend/form.html
+++ b/frontend/form.html
@@ -175,7 +175,7 @@
                         formData.append('email',email);
                                                                 
                         var xhttp = new XMLHttpRequest();
-                        xhttp.open('POST', "http://localhost:7000/", true);
+                        xhttp.open('POST', "http://localhost:7000/upload", true);
                         var message = document.getElementById('message');
                         xhttp.onreadystatechange = function () {
                         //empty the message div before publishing new messages    
